Fix overlapping scrollbar handle

--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template: repeat(3, auto)/repeat(2, auto);
     grid-gap: 3rem;
-    margin: 2rem 0;
+    margin: 2rem 1rem;
     animation: .3s cubic-bezier(.43,.12,.81,.2) 0s 1 fadeIn;
 
     @media only screen and (max-width: $tablet) {
